# examples-python

./: LICENSE  README.md
0. books-and-notes/: enums.txt  python_variable scope.txt  tuples.txt
async/: hello_world.py  hello_world_task.py
beautiful-soup/: read_table.py
clickhouse-query/: Dockerfile  Makefile  Readme.md  app.py  docker-compose.yml  pytest.ini  requirements.txt  test_requirements.txt
clickhouse-query/tests/: test_unit_mock_db.py
database-clients/: Dockerfile  Makefile  Readme.md  app.py  docker-compose.yml  pytest.ini  requirements.txt
func-mapper-deb/: Makefile  Readme.md  dev.py  pytest.ini  requirements.txt  setup.py
in-memory-db/: README.md  Vagrantfile
interviews-and-data-structures/: duplicates_sorted_linked_list.py  hamming_distance.py  linked_list.py  random_list_permutations.py
lang-rust-example/: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
lang-rust-example/rust-example/: Cargo.toml  Makefile  pyproject.toml
lang-rust-example/rust-example/src/: lib.rs
lru-cache/: .gitignore  Makefile  README.md  myapp.py  requirements.txt
module-import/: module1.py  runme.py
mysql-client/: client.py
oop/: Class Variables.py  Classes.py  Inheritance.py  inheritance constructorss.txt
range-lookup/: Makefile  README.md  main.py  pyproject.toml
stock-scraper/: .gitignore  Makefile  README.md  a.py  main.py  pyproject.toml  ruff.toml
ticket-burner/: .gitignore  Makefile  README.md  Vagrantfile  pyproject.toml
url-unshorten-with-cache/: README.md  pyproject.toml  unshorten_url_linkedin.py
(+36 files in other folders)
